tests/should_fail/missing_colon.jou
def main() -> void  # Error: expected ':' followed by a new line with more indentation, got end of line
    return
